5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1596_1015.log
== TEST (2019-03-26 19:14:14) 
-- CODE:
#definimos a variavel dos numeros inteiros
numeros=int(input(a)input(b)input(c))
#definimos a variavel do minimo
minimo=min(numeros)
#definimos a variavel do maximo
maximo=max(numeros)
#definimos a variavel do intermediario
inter=(a+b+c)-minimo-maximo
#imprimimos tudo
print(minimo)
print(inter)
print(maximo)

-- ERROR:
File "XXXX", line 2
    numeros=int(input(a)input(b)input(c))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:14:39) 
-- CODE:
#definimos a variavel dos numeros inteiros
numeros=int(input(a b c))
#definimos a variavel do minimo
minimo=min(numeros)
#definimos a variavel do maximo
maximo=max(numeros)
#definimos a variavel do intermediario
inter=(a+b+c)-minimo-maximo
#imprimimos tudo
print(minimo)
print(inter)
print(maximo)

-- ERROR:
File "XXXX", line 2
    numeros=int(input(a b c))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:14:51) 
-- CODE:
#definimos a variavel dos numeros inteiros
numeros=int(input("a b c"))
#definimos a variavel do minimo
minimo=min(numeros)
#definimos a variavel do maximo
maximo=max(numeros)
#definimos a variavel do intermediario
inter=(a+b+c)-minimo-maximo
#imprimimos tudo
print(minimo)
print(inter)
print(maximo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    minimo=min(numeros)
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:15:32) 
-- CODE:
#definimos a variavel dos numeros inteiros
numeros=int(input("a/ b/ c"))
#definimos a variavel do minimo
minimo=min(numeros)
#definimos a variavel do maximo
maximo=max(numeros)
#definimos a variavel do intermediario
inter=(a+b+c)-minimo-maximo
#imprimimos tudo
print(minimo)
print(inter)
print(maximo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    minimo=min(numeros)
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:17:48) 
-- CODE:
#definimos a variavel dos numeros inteiros
a=int(input("a"))
b=int(input("b"))
c=int(input("c"))
#definimos a variavel do minimo
minimo=min(numeros)
#definimos a variavel do maximo
maximo=max(numeros)
#definimos a variavel do intermediario
inter=(a+b+c)-minimo-maximo
#imprimimos tudo
print(minimo)
print(inter)
print(maximo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    minimo=min(numeros)
NameError: name 'numeros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:18:21) 
-- CODE:
#definimos a variavel dos numeros inteiros
a=int(input("a"))
b=int(input("b"))
c=int(input("c"))
#definimos a variavel do minimo
minimo=min(a b c)
#definimos a variavel do maximo
maximo=max(a b c)
#definimos a variavel do intermediario
inter=(a+b+c)-minimo-maximo
#imprimimos tudo
print(minimo)
print(inter)
print(maximo)

-- ERROR:
File "XXXX", line 6
    minimo=min(a b c)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:19:00) 
-- CODE:
#definimos a variavel dos numeros inteiros
a=int(input("a"))
b=int(input("b"))
c=int(input("c"))
#definimos a variavel do minimo
minimo=min(a,b,c)
#definimos a variavel do maximo
maximo=max(a,b,c)
#definimos a variavel do intermediario
inter=(a+b+c)-minimo-maximo
#imprimimos tudo
print(minimo)
print(inter)
print(maximo)

-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:19:10) 
-- CODE:
#definimos a variavel dos numeros inteiros
a=int(input("a"))
b=int(input("b"))
c=int(input("c"))
#definimos a variavel do minimo
minimo=min(a,b,c)
#definimos a variavel do maximo
maximo=max(a,b,c)
#definimos a variavel do intermediario
inter=(a+b+c)-minimo-maximo
#imprimimos tudo
print(minimo)
print(inter)
print(maximo)

-- EXECUTION TIME:
0.127558
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
